Fixed the run.sh. Added tests